--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "start": "node .",
     "build": "npm-run-all clean lint tsc copy-assets",
     "clean-src": "rimraf src",
-    "poststart": "heroku local web",
-    "postinstall": "npm-run-all build clean-src poststart",
+    "postinstall": "npm-run-all build clean-src",
     "dev:start": "npm-run-all build start",
     "dev": "nodemon --watch src -e ts,ejs --exec npm run dev:start",
     "test": "echo \"Error: no test specified\" && exit 1",
