--- a/tsconfig.json
+++ b/tsconfig.json
@@ -101,6 +101,6 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "include": [
-    "src/**/*.ts", "src/public/js/customs/about.js", "src/public/js/home.js", 
+    "src/**/*.ts",
   ],
 }
